2013-09-13

	* libsylph/procheader.c
	  libsylph/procmsg.h
	  libsylph/procmime.[ch]
	  src/icons/html.png
	  src/icons/Makefile.am
	  src/stock_pixmap.[ch]
	  src/summaryview.c: distinguish icon for HTML mail and other mail
	  with attachments on summaryview (#84) (Thanks to Hayashi).

2013-09-11

	* src/quick_search.[ch]
	  libsylph/folder.c: added 'Last 30 days' to the quick search menu.

2013-09-10

	* src/imageview.[ch]
	  src/textview.c: rotate attached images based on Exif orientation tag.

2013-08-28

	* version 3.4.0beta5

2013-08-28

	* configure.in
	  po/eu.po: added Basque translation.

2013-08-26

	* libsylph/html.c: properly unescape special characters in links
	  (#120).

2013-08-16

	* libsylph/imap.c: imap_status(): fixed the parse failure of STATUS
	  response if a folder name contains brackets (sylpheed:35704).

2013-06-07

	* config.guess
	  config.sub: updated to 2009-06-11 version.

2013-06-07

	* src/template.c: template_compare_id(): fixed constness.

2013-06-03

	* src/prefs_template.c
	  src/template.[ch]: stabilize the order of templates.

2013-05-24

	* version 3.4.0beta4

2013-05-24

	* src/compose.c: compose_ext_editor_child_exit(): raise compose
	  window when the external editor exits (thanks to Steve Kirkendall).

2013-05-24

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2013-05-23

	* libsylph/prefs_common.[ch]
	  src/messageview.c
	  src/filesel.c
	  src/summaryview.c: save selected file type.


2013-05-21

	* src/filesel.[ch]
	  src/messageview.c
	  src/summaryview.c: automatically modify file extension when
	  file type is changed.

2013-05-20

	* src/textview.c: textview_write_link(): insert space between
	  continuous links to avoid non-responsive links.

2013-05-15

	* src/printing.c: modified debug output.

2013-05-14

	* src/messageview.[ch]
	  src/mimeview.[ch]: refactored: moved MimeInfo and file path member
	  from MimeInfo to MessageView so that it can be used from TextView.

2013-05-14
