@@ -1,3 +1,7 @@
+2013-09-17
+
+	* src/textview.c: modified debug output.
+
 2013-09-13
 
 	* libsylph/procheader.c
